# erg-score-pipeline

./: .python-version  Dockerfile  README.md  cli_entry.py  main.py  pyproject.toml  requirements.txt  test_cli_entry.py  testplot.py  testprocess.py  transform.py
dev/: cli_input.ipynb  dashboard.ipynb  easyocr.ipynb  manual_entry.ipynb  tesseract.ipynb
processed_data/: workout_A.csv
raw_data/CSVs/: 2023-01-17.csv  erg scores - 2022-07-18.csv  erg scores - 2022-10-17.csv  erg scores - 2023-01-02.csv  erg scores - 2023-01-17.csv  erg scores - 2023-03-01.csv  erg scores - 2023-03-15.csv
